Add whitespace validation on adding task + some styling fixes

--- a/TODOlist/MainWindow.xaml
+++ b/TODOlist/MainWindow.xaml
@@ -4,25 +4,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TODOlist"
+        ResizeMode="NoResize"
         mc:Ignorable="d"
-        Title="TODO List" Height="350" Width="525">
-    <Grid Margin="0,0,0,22">
+        Title="TODO List" Height="502" Width="439" SizeToContent="WidthAndHeight">
+    <Grid Margin="0,0,12,14">
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" 
-                 Text="What do you want to do..." VerticalAlignment="Top" Width="410" Margin="10,10,0,0" 
+                 Text="What do you want to do..." VerticalAlignment="Top" Width="310" Margin="10,10,0,0" 
                  GotMouseCapture="textBox_GotMouseCapture" GotKeyboardFocus="textBox_GotKeyboardFocus" 
                  KeyUp="textBox_Enter"/>
-        <Button x:Name="button" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="432,10,0,0" Height="23" Click="button_Click"/>
-        <ListView Margin="10,45,197,19" Name="taskListView" KeyUp="textBox_Del" ItemsSource="{Binding TaskList._TaskList}">
+        <Button x:Name="button" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="330,10,0,0" Height="23" Click="button_Click"/>
+        <ListView Margin="10,38,0,0" Name="taskListView" KeyUp="textBox_Del" ItemsSource="{Binding TaskList._TaskList}" HorizontalAlignment="Left" Width="395" Height="374" VerticalAlignment="Top">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Width="160" Header="Content" DisplayMemberBinding="{Binding Content}"/>
-                    <GridViewColumn Width="160" Header="DateTimeCreated" DisplayMemberBinding="{Binding DateTimeCreated}"/>
-
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style TargetType="{x:Type GridViewColumnHeader}">
+                            <Setter Property="IsEnabled" Value="False"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="TextElement.Foreground" Value="Black"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </GridView.ColumnHeaderContainerStyle>
+                    <GridViewColumn Width="290" Header="Content" DisplayMemberBinding="{Binding Content}" />
+                    <GridViewColumn Width="100" Header="Created" DisplayMemberBinding="{Binding DateTimeCreated}"/>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="removeButton" Content="Remove" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="245,283,0,-9" Height="23" Click="removeButton_Click"/>
+        <Button x:Name="removeButton" Content="Remove" Margin="10,417,0,0" Click="removeButton_Click" HorizontalAlignment="Left" Width="90" Height="32" VerticalAlignment="Top"/>
 
 
     </Grid>
+    
 </Window>
