Add reloading tasks from json

--- a/TODOlist/MainWindow.xaml
+++ b/TODOlist/MainWindow.xaml
@@ -15,10 +15,10 @@
         </Grid.ColumnDefinitions>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" 
                  Text="What do you want to do..." VerticalAlignment="Top" Width="310" Margin="10,10,0,0" 
-                 GotMouseCapture="textBox_GotMouseCapture" GotKeyboardFocus="textBox_GotKeyboardFocus" 
-                 KeyUp="textBox_Enter" Grid.ColumnSpan="3"/>
-        <Button x:Name="button" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="80,10,0,0" Height="23" Click="button_Click" Grid.Column="2"/>
-        <ListView Margin="10,38,0,0" Name="taskListView" KeyUp="textBox_Del" ItemsSource="{Binding TaskList._TaskList}" HorizontalAlignment="Left" Width="395" Height="374" VerticalAlignment="Top" Grid.ColumnSpan="3">
+                 GotMouseCapture="TextBox_GotMouseCapture" GotKeyboardFocus="TextBox_GotKeyboardFocus" 
+                 KeyUp="TextBox_Enter" Grid.ColumnSpan="3"/>
+        <Button x:Name="button" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="80,10,0,0" Height="23" Click="Button_Click" Grid.Column="2"/>
+        <ListView Margin="10,38,0,0" Name="taskListView" KeyUp="TextBox_Del" ItemsSource="{Binding TaskList.TaskList}" HorizontalAlignment="Left" Width="395" Height="374" VerticalAlignment="Top" Grid.ColumnSpan="3">
             <ListView.View>
                 <GridView>
                     <GridView.ColumnHeaderContainerStyle>
@@ -36,7 +36,8 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button x:Name="removeButton" Content="Remove" Margin="10,417,0,0" Click="removeButton_Click" HorizontalAlignment="Left" Width="85" Height="23" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button x:Name="removeButton" Content="Remove" Margin="10,417,0,0" Click="RemoveButton_Click" HorizontalAlignment="Left" Width="85" Height="23" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button x:Name="Load" Content="Load" Margin="45,417,0,0" Click="Load_Click" HorizontalAlignment="Left" Width="85" Height="23" VerticalAlignment="Top" Grid.Column="1"/>
 
 
     </Grid>
